--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="cssw.css">
+<link rel="stylesheet" type="text/css" href="stylesheet.css">
 body {
   background-color: lightblue;
 }
