--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,7 @@
 <link rel="stylesheet" type="text/css" href="stylesheet.css">
+<html>
+<head>
+<style>
 body {
   background-color: lightblue;
 }
@@ -12,3 +15,12 @@ p {
   font-family: verdana;
   font-size: 20px;
 }
+</style>
+</head>
+<body>
+
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
+
+</body>
+</html>
